--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,12 +75,21 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+fonts:
+     - family: Gilroy
+       fonts:
+         - asset: lib/assets/gilroy/Gilroy-Regular.ttf
+         - asset: lib/assets/gilroy/Gilroy-SemiBold.ttf
+           weight: 600         
+         - asset: lib/assets/gilroy/Gilroy-Bold.ttf
+           weight: 700         
+         - asset: lib/assets/gilroy/Gilroy-Medium.ttf
+           weight: 500
+            
+     - family: Blippo
+       fonts:
+         - asset: lib/assets/blippo/blippo.ttf           
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
