--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  sign_in_button: ^3.2.0
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +53,7 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
+
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -60,9 +63,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+assets:
   #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  - assets/Images/google-icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -75,20 +78,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+
 fonts:
-     - family: Gilroy
-       fonts:
-         - asset: lib/assets/gilroy/Gilroy-Regular.ttf
-         - asset: lib/assets/gilroy/Gilroy-SemiBold.ttf
-           weight: 600         
-         - asset: lib/assets/gilroy/Gilroy-Bold.ttf
-           weight: 700         
-         - asset: lib/assets/gilroy/Gilroy-Medium.ttf
-           weight: 500
-            
-     - family: Blippo
-       fonts:
-         - asset: lib/assets/blippo/blippo.ttf           
+  - family: Pacifico
+    fonts:
+      - asset: /assets/fonts/Pacifico-Regular.ttf
 
   #   - family: Trajan Pro
   #     fonts:
