--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   sign_in_button: ^3.2.0
   cached_network_image: ^3.1.0
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
