--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   sign_in_button: ^3.2.0
   cached_network_image: ^3.1.0
   google_nav_bar: ^5.0.6
-  flutter_stripe: ^9.2.0
+  dropdown_search: ^5.0.6
+  
 
 dev_dependencies:
   flutter_test:
